--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/product.css">
+    <link rel="stylesheet" href="./assets/css/project.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
@@ -188,68 +188,101 @@
                 </div>
             </div>
         </header>
-        <section id="product" class="flex flex-col px-10 py-2">
-            <h1 class="md:text-[32px] text-[20px] text-center text-white md:px-32 px-20 md:pt-32 md:pb-32 py-8 my-auto">
-                Produk Kami
-                <br>
-            </h1>
-            <div class="md:flex block justify md:my-8 my-0 mb-8 ">
-                <div class="w:1/3 md:mr-6 mr-0">
-                    <nav class="mb-4  block text-center bg-white justify-center md:w-[100px] w-auto">
-                        <div class="text-white font-bold p-4 mx-auto bg-main ">Kategori</div>
-                        <button class="filter-btn active" data-filter="all">All</button>
-                        <button class="filter-btn" data-filter="horrybeam">Horrybeam</button>
-                        <button class="filter-btn" data-filter="pipa">Pipa</button>
-                        <button class="filter-btn" data-filter="sccafolding">Sccafolding</button>
-                    </nav>
-                </div>
-                <div class="w:2/3">
-                    <div class="justify-start gap-12 block md:flex md:flex-wrap product-card-container">
-                        <div class="product-card" data-category="horrybeam">
-                            <img src="./assets/img/product/horrybeam.jpg" alt="" class="object-cover w-full h-full">
-                            <p class="product-text">Horrybeam</p>
-                            <a href="./detail-product.html" style="text-decoration:none;"
-                                class="product-btn text-sm">Selengkapnya</a>
-                        </div>
+        <section id="about">
+            <div class="px-10 mx-auto p-6">
+                <h1 class="text-4xl text-main font-bold my-4 border-b-4 pb-2 w-fit border-main" data-aos="fade-up">
+                    Tentang
+                </h1>
+                <p class="text-sm font-normal mb-8 text-justify" data-aos="fade-up" data-aos-delay="100">
+                    Pertumbuhan pembangunan di Indonesia yang semakin meningkat dari tahun ke tahun membuat kami ingin
+                    sekali membantu
+                    dan turut serta dalam perkembangan tersebut. PT Bina Jaya Perkasa Mandiri adalah perusahaan yang
+                    bergerak di bidang
+                    supplier scaffolding dan supplier contractor, dengan mengutamakan pelayanan terbaik sejak 15 Juli
+                    1993. Kami
+                    berpegang pada pedoman cepat, tepat, akurat, dan terpercaya untuk memberikan kualitas dan layanan
+                    terbaik kepada
+                    semua pelanggan kami
+                </p>
 
-                        <div class="product-card" data-category="horrybeam">
-                            <img src="./assets/img/product/horrybeam.jpg" alt="" class="object-cover w-full h-full">
-                            <p class="product-text">Horrybeam</p>
-                            <a href="./detail-product.html" style="text-decoration:none;"
-                                class="product-btn text-sm">Selengkapnya</a>
+                <div class="block my-6">
+                    <h2 class="text-2xl font-bold mb-4 text-main text-center" data-aos="fade-up" data-aos-delay="200">
+                        Visi & Misi
+                    </h2>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <div class="bg-main text-white p-6" data-aos="fade-up" data-aos-delay="300">
+                            <h3 class="text-xl font-bold mb-2">Visi</h3>
+                            <p class="font-normal text-xs leading-5 text-justify">
+                                Menjadi perusahaan terkemuka di Indonesia dalam penyediaan solusi scaffolding dan
+                                layanan
+                                konstruksi
+                                yang inovatif, terpercaya, dan berkelanjutan, berkontribusi pada pembangunan
+                                infrastruktur
+                                yang
+                                berkualitas dan mendukung pertumbuhan ekonomi nasional.
+                            </p>
                         </div>
-                        <div class="product-card" data-category="horrybeam">
-                            <img src="./assets/img/product/horrybeam.jpg" alt="" class="object-cover w-full h-full">
-                            <p class="product-text">Horrybeam</p>
-                            <a href="./detail-product.html" style="text-decoration:none;"
-                                class="product-btn text-sm">Selengkapnya</a>
-
-                        </div>
-
-                        <div class="product-card" data-category="sccafolding">
-                            <img src="./assets/img/product/sccafolding.jpg" alt="" class="object-cover w-full h-full">
-                            <p class="product-text">Sccafolding</p>
-                            <a href="./detail-product.html" style="text-decoration:none;"
-                                class="product-btn text-sm">Selengkapnya</a>
-                        </div>
-                        <div class="product-card" data-category="sccafolding">
-                            <img src="./assets/img/product/sccafolding.jpg" alt="" class="object-cover w-full h-full">
-                            <p class="product-text">Sccafolding</p>
-                            <a href="./detail-product.html" style="text-decoration:none;"
-                                class="product-btn text-sm">Selengkapnya</a>
-
-                        </div>
-                        <div class="product-card" data-category="pipa">
-                            <img src="./assets/img/product/pipa.jpg" alt="" class="object-cover w-full h-full">
-                            <p class="product-text">Pipa</p>
-                            <a href="./detail-product.html" style="text-decoration:none;"
-                                class="product-btn text-sm">Selengkapnya</a>
+                        <div class="bg-main text-white p-6" data-aos="fade-up" data-aos-delay="400">
+                            <h3 class="text-xl font-bold mb-2">Misi</h3>
+                            <ol class="font-normal text-xs leading-5 text-justify list-decimal list-inside">
+                                <li>Memberikan layanan terbaik dengan produk dan layanan berkualitas tinggi yang
+                                    memenuhi
+                                    kebutuhan pelanggan.</li>
+                                <li>Selalu berinovasi dalam produk dan layanan, serta meningkatkan proses produksi untuk
+                                    memenuhi standar.</li>
+                                <li>Mengutamakan keselamatan kerja dan kualitas produk dengan menggunakan teknologi
+                                    terkini.
+                                </li>
+                                <li>Aktif berkontribusi pada proyek-proyek pembangunan infrastruktur di seluruh
+                                    Indonesia.</li>
+                                <li>Memastikan kepuasan pelanggan sebagai prioritas utama dengan memberikan solusi yang
+                                    tepat.</li>
+                            </ol>
                         </div>
                     </div>
+                </div>
 
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div class="bg-main text-white p-6 max-h-[300px] md:order-2 order-2" data-aos="fade-up"
+                        data-aos-delay="500">
+                        <h2 class="text-xl font-bold mb-4 italic">Sejarah</h2>
+                        <p class="font-normal text-xs leading-5 text-justify">
+                            Kami melayani berbagai proyek, termasuk gedung, pertokoan, perumahan, perkantoran, terminal
+                            bus,
+                            renovasi rumah, pabrik, sarana pendidikan, dan banyak lagi di seluruh Indonesia. Sejak
+                            berdiri
+                            pada bulan Juni 1992 di Jakarta, kami telah menunjukkan kemampuan supply yang baik dan
+                            kualitas
+                            barang yang dihasilkan oleh tenaga ahli yang berpengalaman. Produk kami diproduksi dengan
+                            standar nasional dan ukuran yang sesuai dengan perkembangan di Indonesia.
+                        </p>
+                    </div>
+                    <div class="max-h-[300px] md:order-1 order-1">
+                        <img alt="A modern conference room with a wooden table and chairs, surrounded by wooden panels and a unique ceiling light fixture."
+                            src="./assets/img/hero/2.jpg" data-aos="fade-up" data-aos-delay="600" />
+                    </div>
+                    <div class="md:order-4 order-4">
+                        <img alt="Close-up of a wooden furniture piece with intricate design details."
+                            class="w-full h-auto" height="400" src="./assets/img/hero/5.jpg" width="600"
+                            data-aos="fade-up" data-aos-delay="700" />
+                    </div>
+                    <div class="bg-main text-white md:mt-6 mt-0 p-6 md:order-3 order-4" data-aos="fade-up"
+                        data-aos-delay="800">
+                        <h2 class="text-xl font-bold mb-4">Jangkauan</h2>
+                        <p class="font-normal text-xs leading-5 text-justify">
+                            Seiring berkembangnya perusahaan, kami melakukan perluasan daerah ke wilayah Jawa Timur
+                            (Surabaya), Jawa
+                            Tengah (Semarang), Jawa Barat (Bandung), serta Sumatera Selatan (Palembang), Jambi, dan
+                            Riau. Perluasan
+                            cabang-cabang ini bertujuan agar PT Bina Jaya Perkasa Mandiri dapat memenuhi kebutuhan
+                            pembangunan di
+                            Indonesia dengan cepat dan tepat, tanpa mengurangi kepuasan pelanggan kami.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
+
     </div>
     <footer id="contact" class="p-10  bg-main">
         <h1 class="text-main text-[20px] font-bold mb-4">Hubungi Kami</h1>
@@ -271,7 +304,7 @@
             </div>
             <div class="md:w-[18%] w-full md:mb-0 mb-5 md:order-3 order-4">
                 <h3 class="mb-2 text-white hover:text-black">Pintasan</h3>
-                <div class="flex flex-col">
+                <div class="flex flex-col ">
                     <a href="./index.html" class="text-white font-normal hover:text-black mb-1" href="">Home</a>
                     <a href="./about.html" class="text-white font-normal hover:text-black mb-1" href="">Tentang</a>
                     <a href="./service.html" class="text-white font-normal hover:text-black mb-1" href="">Layanan</a>
@@ -282,7 +315,7 @@
                 </div>
             </div>
             <div class="md:w-[18%] w-full md:mb-0 mb-5 md:order-4 order-5">
-                <h3 class="mb-2 text-white hover:text-black">Kantor Utama</h3>
+                <h3 class="mb-2 text-white hover:text-black ">Kantor Utama</h3>
                 <div class="flex flex-col">
                     <a class="text-white font-normal hover:text-black" href="">JI. Gunung Sari 5 H Surabaya 60242</a>
                     <a class="text-white font-normal hover:text-black" href="">Telp. (031) 5682517, 5682533</a>
@@ -311,9 +344,9 @@
         </div>
     </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <!-- <script>
+    <script>
         AOS.init();
-    </script> -->
+    </script>
     <script>
         tailwind.config = {
             theme: {
@@ -329,7 +362,7 @@
         }
     </script>
     <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/product.js"></script>
+    <script src="./assets/js/project.js"></script>
 </body>
 
 </html>
