--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/product.css">
+    <link rel="stylesheet" href="./assets/css/project.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
@@ -188,65 +188,61 @@
                 </div>
             </div>
         </header>
-        <section id="product" class="flex flex-col px-10 py-2">
+        <section id="project" class="flex flex-col px-10 py-2">
             <h1 class="md:text-[32px] text-[20px] text-center text-white md:px-32 px-20 md:pt-32 md:pb-32 py-8 my-auto">
-                Produk Kami
+                Proyek Kami
                 <br>
             </h1>
-            <div class="md:flex block justify md:my-8 my-0 mb-8 ">
-                <div class="w:1/3 md:mr-6 mr-0">
-                    <nav class="mb-4  block text-center bg-white justify-center md:w-[100px] w-auto">
-                        <div class="text-white font-bold p-4 mx-auto bg-main ">Kategori</div>
-                        <button class="filter-btn active" data-filter="all">All</button>
-                        <button class="filter-btn" data-filter="horrybeam">Horrybeam</button>
-                        <button class="filter-btn" data-filter="pipa">Pipa</button>
-                        <button class="filter-btn" data-filter="sccafolding">Sccafolding</button>
-                    </nav>
-                </div>
-                <div class="w:2/3">
-                    <div class="justify-start gap-12 block md:flex md:flex-wrap product-card-container">
-                        <div class="product-card" data-category="horrybeam">
-                            <img src="./assets/img/product/horrybeam.jpg" alt="" class="object-cover w-full h-full">
-                            <p class="product-text">Horrybeam</p>
-                            <a href="./detail-product.html" style="text-decoration:none;"
-                                class="product-btn text-sm">Selengkapnya</a>
-                        </div>
-
-                        <div class="product-card" data-category="horrybeam">
-                            <img src="./assets/img/product/horrybeam.jpg" alt="" class="object-cover w-full h-full">
-                            <p class="product-text">Horrybeam</p>
-                            <a href="./detail-product.html" style="text-decoration:none;"
-                                class="product-btn text-sm">Selengkapnya</a>
-                        </div>
-                        <div class="product-card" data-category="horrybeam">
-                            <img src="./assets/img/product/horrybeam.jpg" alt="" class="object-cover w-full h-full">
-                            <p class="product-text">Horrybeam</p>
-                            <a href="./detail-product.html" style="text-decoration:none;"
-                                class="product-btn text-sm">Selengkapnya</a>
-
-                        </div>
-
-                        <div class="product-card" data-category="sccafolding">
-                            <img src="./assets/img/product/sccafolding.jpg" alt="" class="object-cover w-full h-full">
-                            <p class="product-text">Sccafolding</p>
-                            <a href="./detail-product.html" style="text-decoration:none;"
-                                class="product-btn text-sm">Selengkapnya</a>
-                        </div>
-                        <div class="product-card" data-category="sccafolding">
-                            <img src="./assets/img/product/sccafolding.jpg" alt="" class="object-cover w-full h-full">
-                            <p class="product-text">Sccafolding</p>
-                            <a href="./detail-product.html" style="text-decoration:none;"
-                                class="product-btn text-sm">Selengkapnya</a>
-
-                        </div>
-                        <div class="product-card" data-category="pipa">
-                            <img src="./assets/img/product/pipa.jpg" alt="" class="object-cover w-full h-full">
-                            <p class="product-text">Pipa</p>
-                            <a href="./detail-product.html" style="text-decoration:none;"
-                                class="product-btn text-sm">Selengkapnya</a>
-                        </div>
+            <div class="md:flex block justify md:my-12 my-0 mb-12 ">
+                <div class="justify-between gap-12 block md:flex md:flex-wrap project-card-container">
+                    <div class="project-card">
+                        <img src="./assets/img/project/1.jpg" alt="" class="object-cover w-full h-full">
+                        <p>Sccafolding <br>
+                            <span class="text-xs text-white font-normal">Jakarta</span>
+                        </p>
                     </div>
-
+                    <div class="project-card">
+                        <img src="./assets/img/project/1.jpg" alt="" class="object-cover w-full h-full">
+                        <p>Sccafolding <br>
+                            <span class="text-xs text-white font-normal">Jakarta</span>
+                        </p>
+                    </div>
+                    <div class="project-card">
+                        <img src="./assets/img/project/1.jpg" alt="" class="object-cover w-full h-full">
+                        <p>Sccafolding <br>
+                            <span class="text-xs text-white font-normal">Jakarta</span>
+                        </p>
+                    </div>
+                    <div class="project-card">
+                        <img src="./assets/img/project/2.jpg" alt="" class="object-cover w-full h-full">
+                        <p>Steel Armor <br>
+                            <span class="text-xs text-white font-normal">Mojokerto</span>
+                        </p>
+                    </div>
+                    <div class="project-card">
+                        <img src="./assets/img/project/3.jpg" alt="" class="object-cover w-full h-full">
+                        <p>Steel Armor <br>
+                            <span class="text-xs text-white font-normal">Mojokerto</span>
+                        </p>
+                    </div>
+                    <div class="project-card">
+                        <img src="./assets/img/project/3.jpg" alt="" class="object-cover w-full h-full">
+                        <p>Steel Armor <br>
+                            <span class="text-xs text-white font-normal">Mojokerto</span>
+                        </p>
+                    </div>
+                    <div class="project-card">
+                        <img src="./assets/img/project/3.jpg" alt="" class="object-cover w-full h-full">
+                        <p>Steel Armor <br>
+                            <span class="text-xs text-white font-normal">Mojokerto</span>
+                        </p>
+                    </div>
+                    <div class="project-card">
+                        <img src="./assets/img/project/3.jpg" alt="" class="object-cover w-full h-full">
+                        <p>Steel Armor <br>
+                            <span class="text-xs text-white font-normal">Mojokerto</span>
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -329,7 +325,7 @@
         }
     </script>
     <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/product.js"></script>
+    <script src="./assets/js/project.js"></script>
 </body>
 
 </html>
